@@ -4,6 +4,8 @@ import ma.ac.inpt.models.UserFeedEntity;
 import ma.ac.inpt.exceptions.ResourceNotFoundException;
 import ma.ac.inpt.models.Post;
 import ma.ac.inpt.payload.SlicedResult;
+import ma.ac.inpt.postservice.FeedService;
+import ma.ac.inpt.postservice.PostService;
 import ma.ac.inpt.repo.Cassandra;
 
 import org.junit.jupiter.api.Assertions;
@@ -14,10 +16,7 @@ import org.mockito.Mockito;
 import org.springframework.data.cassandra.core.query.CassandraPageRequest;
 import org.springframework.data.domain.Slice;
 
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
 
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
@@ -29,8 +28,6 @@ public class FeedServiceTest {
     @Mock
     private Cassandra feedRepository;
 
-    @Mock
-    private AuthService authService;
 
     @Mock
     private PostService postService;
@@ -38,9 +35,8 @@ public class FeedServiceTest {
     @BeforeEach
     public void setUp() {
         feedRepository = Mockito.mock(Cassandra.class);
-        authService = Mockito.mock(AuthService.class);
         postService = Mockito.mock(PostService.class);
-        feedService = new FeedService(feedRepository, authService, postService);
+        feedService = new FeedService(feedRepository, postService);
     }
 
     @Test
@@ -53,29 +49,25 @@ public class FeedServiceTest {
         Slice<UserFeedEntity> mockSlice = Mockito.mock(Slice.class);
         when(feedRepository.findByUsername(eq(username), any(CassandraPageRequest.class))).thenReturn(mockSlice);
         when(mockSlice.isEmpty()).thenReturn(false);
+        when(mockSlice.isLast()).thenReturn(true); // Set the slice as the last page
 
         // Mock the PostService to return posts
-        List<Post> mockPosts = Collections.singletonList(Post.builder().build());
+        List<Post> mockPosts = List.of(Post.builder().userProfilePic("profile.jpg").build());
         when(postService.findPostsIn(anyList())).thenReturn(mockPosts);
 
-        // Mock the AuthService to return users' profile pictures
-        Map<String, String> mockProfilePics = Collections.singletonMap("testuser", "profile.jpg");
-        when(authService.usersProfilePic(anyList())).thenReturn(mockProfilePics);
 
         // Invoke the getUserFeed method
         SlicedResult<Post> result = feedService.getUserFeed(username, pagingState);
-
         // Assert the expected behavior and result
         Assertions.assertNotNull(result);
         Assertions.assertEquals(mockPosts, result.getContent());
-        Assertions.assertFalse(result.isLast());
-        Assertions.assertEquals(mockProfilePics.get(username), result.getContent().get(0).getUserProfilePic());
+        Assertions.assertTrue(result.isLast());
 
         // Verify the method invocations
         verify(feedRepository, times(1)).findByUsername(eq(username), any(CassandraPageRequest.class));
         verify(postService, times(1)).findPostsIn(anyList());
-        verify(authService, times(1)).usersProfilePic(anyList());
     }
+
 
     @Test
     public void testGetUserFeed_WithInvalidUsername_ThrowsResourceNotFoundException() {
